--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -255,18 +255,18 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSetti
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.BaseColor,MaterialEditorInstanceConstant.ParameterGroups.ClearCoat,MaterialEditorInstanceConstant.ParameterGroups.Diffraction,MaterialEditorInstanceConstant.ParameterGroups.EdgeGlow,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.KillEdge,MaterialEditorInstanceConstant.ParameterGroups.Logo,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.ParameterGroups.Spec,
 MaterialInstanceConstant=
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 SG_PlayerProfile_C=
-BP_MenuController_C=
+BP_MenuController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 BP_LobbyCharacter_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 ChildActorComponent=
-WB_CharacterMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+WB_CharacterMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 Button=PropertyWrapper.DefaultValueCategory.PlayerProfile,
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 BP_Menu_GameMode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-K2Node=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+K2Node=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 WB_LobbyMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_SHooter_Gameinstance_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
@@ -275,7 +275,7 @@ BP_SHooter_PlayerController_C=
 Controller=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_Shooter_Playerstate_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_LobbyPlayerSpot_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-EdGraph=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+EdGraph=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 BP_Hero_Quinn_Blue_C=
 BP_Hero_Quinn_Green_C=
 BP_Hero_Quinn_Purple_C=
@@ -284,10 +284,10 @@ BP_Hero_Base_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Variabl
 BP_SHooter_Gamemode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SpawnDefaultPawnFor_5=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SpawnDefaultPawnFor=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-WB_Customisation_Button_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+WB_Customisation_Button_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 OpenCustomisationMenu_10=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 OpenCustomisationMenu=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 UserDefinedStruct=UserDefinedStruct.DefaultValues.XP_Map_Levels_4_733DF53C4B857A55345ED698F5D9B555,UserDefinedStruct.DefaultValues.MemberVar_5_6_B9C028684115A837A113BE8430EFB118,
 S_XPandLevels=
@@ -304,15 +304,19 @@ CheckForLevelUp=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Variab
 Actor=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 WB_MainMenu_C=
 WB_Infocard_XP_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 Pawn=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 K2Node_SetFieldsInStruct=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 S_ModelAndSkins=
 S_CharCustomisation=
+Char Button Pressed_8=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+Char Button Pressed=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
+CustomisationButtonPressed_12=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
+CustomisationButtonPressed=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 
 [EditorStartup]
-LastLevel=/Game/Maps/Map_01
+LastLevel=/Game/Maps/Menu/MainMenu_Map
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1667,7 +1671,13 @@ WB_Infocard_XP_C.Default=True
 K2Node_SetFieldsInStruct.PinOptions=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Gameplay/Lobby/BP_LobbyCharacter.BP_LobbyCharacter
+OpenAssetsAtExit=/Game/Widgets/WB_CharacterMenu.WB_CharacterMenu
+OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
+OpenAssetsAtExit=/Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode
+OpenAssetsAtExit=/Game/Widgets/WB_Customisation_Button.WB_Customisation_Button
+OpenAssetsAtExit=/Game/SavedData/SG_PlayerProfile.SG_PlayerProfile
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1732,25 +1742,25 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Characters/S_ModelAndSkins
-MRUItem1=/Game/Characters/S_CharCustomisation
-MRUItem2=/Game/Characters/CharCustomisation_Table
-MRUItem3=/Game/Framework/BP_Menu_GameMode
-MRUItem4=/Game/Framework/BP_MenuController
-MRUItem5=/Game/Framework/BP_SHooter_Gameinstance
-MRUItem6=/Game/SavedData/SG_PlayerProfile
-MRUItem7=/Game/SavedData/S_PlayerProfile
-MRUItem8=/Game/Widgets/WB_MainMenu
-MRUItem9=/Game/Widgets/WB_IngameHUD
-MRUItem10=/Game/Widgets/WB_InfoCard_XP
-MRUItem11=/Game/Gameplay/Test/XP_Trigger
-MRUItem12=/Game/Framework/Interface/BPI_XP_Interface
-MRUItem13=/Game/Characters/S_XPandLevels
-MRUItem14=/Game/Characters/BP_XP_Component
-MRUItem15=/Game/Maps/Menu/MainMenu_Map
-MRUItem16=/Game/Widgets/WB_CharacterMenu
+MRUItem1=/Game/Characters/S_CharacterInfo
+MRUItem2=/Game/Characters/S_CharCustomisation
+MRUItem3=/Game/SavedData/S_PlayerProfile
+MRUItem4=/Game/SavedData/SG_PlayerProfile
+MRUItem5=/Game/Characters/CharacterInfo_Table
+MRUItem6=/Game/Characters/CharCustomisation_Table
+MRUItem7=/Game/Widgets/WB_Customisation_Button
+MRUItem8=/Game/Framework/BP_Menu_GameMode
+MRUItem9=/Game/Framework/BP_MenuController
+MRUItem10=/Game/Widgets/WB_CharacterMenu
+MRUItem11=/Game/Gameplay/Lobby/BP_LobbyCharacter
+MRUItem12=/Game/Maps/Menu/MainMenu_Map
+MRUItem13=/Game/Widgets/WB_ServerRow
+MRUItem14=/Game/Widgets/WB_PauseMenu
+MRUItem15=/Game/Widgets/WB_MpMenu
+MRUItem16=/Game/Widgets/WB_MainMenu
 MRUItem17=/Game/Widgets/WB_LobbyMenu
-MRUItem18=/Game/Framework/BP_SHooter_PlayerController
-MRUItem19=/Game/Maps/Map_01
+MRUItem18=/Game/Characters/CharCustomisation_Table_Pom
+MRUItem19=/Game/Framework/BP_SHooter_Gameinstance
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1763,8 +1773,8 @@ AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1793,12 +1803,12 @@ AnimationAsset="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 ParticleModuleBeamBase="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 ParticleModule="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
-SG_PlayerProfile_C="\"Object.PlayerProfile\" "
-SaveGame="\"Object.PlayerProfile\" "
+SG_PlayerProfile_C=
+SaveGame=
 WB_CharacterMenu_C=
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-S_CharCustomisation=
+S_CharCustomisation="\"Struct.ModelsAndSkins_9_D14649254DC0C7026A8158B028EFF4AB\" "
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_Customisation_Button_C=
 S_XPandLevels="\"Struct.XP_Map_Levels_4_733DF53C4B857A55345ED698F5D9B555\" \"Struct.MemberVar_5_6_B9C028684115A837A113BE8430EFB118\" "
@@ -1892,6 +1902,7 @@ WB_Infocard_XP_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransfo
 /Game/Gameplay/Test/XP_Trigger.XP_Trigger=1
 /Game/Characters/BP_XP_Component.BP_XP_Component=0
 /Game/Widgets/WB_Infocard_XP.WB_Infocard_XP=1
+/Game/Characters/CharCustomisation_Table_Pom.CharCustomisation_Table=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -3062,7 +3073,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=BlueprintLog
 
 [PlacementMode]
 RecentlyPlaced=/Game/Gameplay/Test/XP_Trigger.XP_Trigger;
@@ -3173,4 +3184,9 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[ColorThemes]
+Theme0=New Theme
+Theme0Color0=(R=215.892548,G=0.977225,B=0.200000,A=0.200000)
+Theme0Label0=
 
