#20 (całość, naprawienie błędów)

--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,14 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1536,Y=952)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@EMILKA
 LastExecutedLaunchName=EMILKA
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=-1920,Y=5)
-MultipleInstancePositions=(X=28,Y=29)
+MultipleInstancePositions=(X=-1038,Y=111)
 NewWindowWidth=1536
 NewWindowHeight=952
 
@@ -257,7 +257,7 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Ba
 MaterialInstanceConstant=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 SG_PlayerProfile_C=
-BP_MenuController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
+BP_MenuController_C=
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 BP_LobbyCharacter_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 ChildActorComponent=
@@ -1671,13 +1671,7 @@ WB_Infocard_XP_C.Default=True
 K2Node_SetFieldsInStruct.PinOptions=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Gameplay/Lobby/BP_LobbyCharacter.BP_LobbyCharacter
-OpenAssetsAtExit=/Game/Widgets/WB_CharacterMenu.WB_CharacterMenu
-OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
-OpenAssetsAtExit=/Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode
-OpenAssetsAtExit=/Game/Widgets/WB_Customisation_Button.WB_Customisation_Button
-OpenAssetsAtExit=/Game/SavedData/SG_PlayerProfile.SG_PlayerProfile
+CleanShutdown=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1803,8 +1797,8 @@ AnimationAsset="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 ParticleModuleBeamBase="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 ParticleModule="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
-SG_PlayerProfile_C=
-SaveGame=
+SG_PlayerProfile_C="\"Object.PlayerProfile\" "
+SaveGame="\"Object.PlayerProfile\" "
 WB_CharacterMenu_C=
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2038,7 +2032,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=-1457.000 Y=4.000
+ScreenPosition=X=-1118.000 Y=-4.000
 WindowSize=X=985.000 Y=1021.000
 InitiallyMaximized=True
 
