--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -259,7 +259,7 @@ PropertyWrapper=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Variab
 SG_PlayerProfile_C=
 BP_MenuController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
-BP_LobbyCharacter_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
+BP_LobbyCharacter_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 ChildActorComponent=
 WB_CharacterMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 Button=PropertyWrapper.DefaultValueCategory.PlayerProfile,
@@ -268,10 +268,10 @@ K2Node_Variable=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_Variab
 BP_Menu_GameMode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 K2Node=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 WB_LobbyMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
-K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 BP_SHooter_Gameinstance_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-BP_SHooter_PlayerController_C=
+BP_SHooter_PlayerController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 Controller=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_Shooter_Playerstate_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_LobbyPlayerSpot_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
@@ -321,6 +321,8 @@ CreateAllInventoryButtons_2=PropertyWrapper.DefaultValueCategory.PlayerProfile,K
 CreateAllInventoryButtons=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 UpdWeaponInfo_4=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 UpdWeaponInfo=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+SaveSelectedLoadout_25=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+SaveSelectedLoadout=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Menu/MainMenu_Map
@@ -1676,12 +1678,35 @@ WB_Infocard_XP_C.Navigation=True
 WB_Infocard_XP_C.Events=True
 WB_Infocard_XP_C.Default=True
 K2Node_SetFieldsInStruct.PinOptions=True
+WB_LoadoutMenu_C.Default=True
+WB_LoadoutMenu_C.Appearance=True
+WB_LoadoutMenu_C.Designer=True
+WB_LoadoutMenu_C.Input=True
+WB_LoadoutMenu_C.Interaction=True
+WB_LoadoutMenu_C.Performance=True
+WB_LoadoutMenu_C.Layout=True
+WB_LoadoutMenu_C.Behavior=True
+WB_LoadoutMenu_C.Render Transform=True
+WB_LoadoutMenu_C.Localization=True
+WB_LoadoutMenu_C.Accessibility=True
+WB_LoadoutMenu_C.Clipping=True
+WB_LoadoutMenu_C.Navigation=True
+WB_Button_WpnInv_C.Default=True
+WB_Button_WpnInv_C.Appearance=True
+WB_Button_WpnInv_C.Designer=True
+WB_Button_WpnInv_C.Input=True
+WB_Button_WpnInv_C.Interaction=True
+WB_Button_WpnInv_C.Performance=True
+WB_Button_WpnInv_C.Layout=True
+WB_Button_WpnInv_C.Behavior=True
+WB_Button_WpnInv_C.Render Transform=True
+WB_Button_WpnInv_C.Localization=True
+WB_Button_WpnInv_C.Accessibility=True
+WB_Button_WpnInv_C.Clipping=True
+WB_Button_WpnInv_C.Navigation=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Widgets/WB_LoadoutMenu.WB_LoadoutMenu
-OpenAssetsAtExit=/Game/Widgets/WB_Button_WpnInv.WB_Button_WpnInv
-OpenAssetsAtExit=/Game/Widgets/WB_CharacterMenu.WB_CharacterMenu
+CleanShutdown=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1745,26 +1770,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/WB_CharacterMenu
-MRUItem1=/Game/Widgets/WB_LoadoutMenu
-MRUItem2=/Game/Widgets/WB_Button_WpnInv
-MRUItem3=/Game/Maps/Menu/MainMenu_Map
-MRUItem4=/Game/Widgets/WB_LobbyMenu
-MRUItem5=/Game/Framework/BP_Menu_GameMode
-MRUItem6=/Game/Framework/BP_MenuController
-MRUItem7=/Game/Gameplay/Lobby/BP_LobbyCharacter
-MRUItem8=/Game/MilitaryWeapSilver/Weapons/Sniper_Rifle_A
-MRUItem9=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A
-MRUItem10=/Game/Characters/Heroes/Mannequin/Animations/Actions/MM_Rifle_Fire_Montage
-MRUItem11=/Game/Weapons/MigratedAnims/Weap_Rifle_Reload
-MRUItem12=/Game/MilitaryWeapSilver/Weapons/Animations/Prone_Reload_Rifle_W
-MRUItem13=/Game/Weapons/Rifle/Mesh/SK_Rifle
-MRUItem14=/Game/UI/Textures/Icon_Shotgun
-MRUItem15=/Game/Weapons/Shotgun/Mesh/SKM_Shotgun
-MRUItem16=/Game/UI/Textures/Icon_Rifle
-MRUItem17=/Game/UI/Textures/Icon_Pistol
-MRUItem18=/Game/Weapons/Pistol/Mesh/SK_Pistol
-MRUItem19=/Game/MilitaryWeapSilver/Weapons/Pistols_A
+MRUItem0=/Game/Weapons/WeaponInfo_Table
+MRUItem1=/Game/Weapons/S_WeaponInfo
+MRUItem2=/Game/Widgets/WB_MainMenu
+MRUItem3=/Game/Gameplay/Lobby/BP_LobbyCharacter
+MRUItem4=/Game/Characters/CharCustomisation_Table
+MRUItem5=/Game/SavedData/SG_PlayerProfile
+MRUItem6=/Game/SavedData/S_PlayerProfile
+MRUItem7=/Game/Characters/BP_Hero_Base
+MRUItem8=/Game/Widgets/WB_Button_WpnInv
+MRUItem9=/Game/Widgets/WB_LoadoutMenu
+MRUItem10=/Game/Framework/BP_MenuController
+MRUItem11=/Game/Maps/Menu/MainMenu_Map
+MRUItem12=/Game/Widgets/WB_CharacterMenu
+MRUItem13=/Game/Widgets/WB_LobbyMenu
+MRUItem14=/Game/Framework/BP_Menu_GameMode
+MRUItem15=/Game/MilitaryWeapSilver/Weapons/Sniper_Rifle_A
+MRUItem16=/Game/MilitaryWeapSilver/Weapons/Assault_Rifle_A
+MRUItem17=/Game/Characters/Heroes/Mannequin/Animations/Actions/MM_Rifle_Fire_Montage
+MRUItem18=/Game/Weapons/MigratedAnims/Weap_Rifle_Reload
+MRUItem19=/Game/MilitaryWeapSilver/Weapons/Animations/Prone_Reload_Rifle_W
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1779,8 +1804,8 @@ EdGraphNode=
 Border="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1789,10 +1814,10 @@ K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 CheckBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Throbber="\"Object.Layout.Slot\" "
 WB_LoadScreen_C="\"Object.Layout.Slot\" "
-UserWidget=
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_LobbyMenu_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1807,8 +1832,8 @@ AnimationAsset="\"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" "
 ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 ParticleModuleBeamBase="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
 ParticleModule="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength.Distribution\" "
-SG_PlayerProfile_C="\"Object.PlayerProfile\" "
-SaveGame="\"Object.PlayerProfile\" "
+SG_PlayerProfile_C=
+SaveGame=
 WB_CharacterMenu_C=
 ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1818,6 +1843,7 @@ WB_Customisation_Button_C=
 S_XPandLevels="\"Struct.XP_Map_Levels_4_733DF53C4B857A55345ED698F5D9B555\" \"Struct.MemberVar_5_6_B9C028684115A837A113BE8430EFB118\" "
 WB_Infocard_XP_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 S_PlayerProfile="\"Struct.Wpn_Inventory_24_FACC511E4EFE1EBAD25C6CA2996B605E\" "
+WB_LoadoutMenu_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Heroes/Mannequin/Animations/Actions/AM_MM_Shotgun_Melee.AM_MM_Shotgun_Melee=1
