--- a/UE5_03/Config/DefaultEngine.ini
+++ b/UE5_03/Config/DefaultEngine.ini
@@ -103,3 +103,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=Divide
+
