--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -102,7 +102,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=-1920,Y=5)
-MultipleInstancePositions=(X=-1088,Y=14)
+MultipleInstancePositions=(X=-1928,Y=-8)
 NewWindowWidth=1536
 NewWindowHeight=952
 
@@ -1835,7 +1835,8 @@ AIPerceptionStimuliSourceComponent.Cooking=True
 AIPerceptionStimuliSourceComponent.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/AI/BP_AI_Controller_Base.BP_AI_Controller_Base
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1899,11 +1900,11 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Menu/MainMenu_Map
-MRUItem1=/Game/Maps/Map_01
-MRUItem2=/Game/Characters/BP_Hero_Base
-MRUItem3=/Game/AI/BP_AI_Minion_Base
-MRUItem4=/Game/AI/BP_AI_Controller_Base
+MRUItem0=/Game/AI/BP_AI_Controller_Base
+MRUItem1=/Game/Maps/Menu/MainMenu_Map
+MRUItem2=/Game/Maps/Map_01
+MRUItem3=/Game/Characters/BP_Hero_Base
+MRUItem4=/Game/AI/BP_AI_Minion_Base
 MRUItem5=/Game/Framework/Interface/BPI_Damage_Interface
 MRUItem6=/Game/Characters/BP_XP_Component
 MRUItem7=/Game/ParagonMinions/Characters/Minions/Down_Minions/Animations/Melee/Death_A_Montage
@@ -3270,7 +3271,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [PlacementMode]
 RecentlyPlaced=/Game/AI/BP_AI_Minion_Base.BP_AI_Minion_Base;
